# elevator

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: sim.rs
src/: args.rs  controls.rs  lib.rs  main.rs  policy.rs  simulation.rs  stats.rs  traffic.rs
src/policies/: bogo.rs  chatgpt.rs  gemini.rs  gemini2.rs  greedy_utilitarian.rs  mod.rs  scan.rs  simple.rs
src/traffic/: random.rs  spiky.rs
src/traffics/: chatgpt.rs
