[package]
name = "elevator"
version = "0.1.0"
edition = "2024"

[dependencies]
fastrand = "2.4.1"
sketches-ddsketch = "0.4.0"
tracing = "0.1"
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4.6.1", features = ["derive"] }
itoa = "1.0.18"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
